force-app/main/default/objects/ResidentialCommissionConfigure__c/ResidentialCommissionConfigure__c.object-meta.xml
<CustomObject>
    <label>Residential Commission Configure</label>
    <nameField>
        <label>Residential Commission Configure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Residential Commissions Configure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>