force-app/main/default/objects/ResidentialCommissionConfigure__c/fields/Clawbacktime__c.field-meta.xml
<CustomField>
    <fullName>Clawbacktime__c</fullName>
    <defaultValue>90</defaultValue>
    <label>Clawback time (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>