force-app/main/default/objects/ResidentialCommissionConfigure__c/fields/Contractsource__c.field-meta.xml
<CustomField>
    <fullName>Contractsource__c</fullName>
    <label>Contract Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Source</valueSetName>
    </valueSet>
</CustomField>