force-app/main/default/objects/ResidentialCommissionConfigure__c/fields/ECC__c.field-meta.xml
<CustomField>
    <fullName>ECC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECC (Yes or No)</label>
    <type>Checkbox</type>
</CustomField>