force-app/main/default/objects/ResidentialCommissionConfigure__c/fields/Flat_Fee_Paid_To_DNE__c.field-meta.xml
<CustomField>
    <fullName>Flat_Fee_Paid_To_DNE__c</fullName>
    <description>Total amount that DNE got as commission on Residual Opportunity.</description>
    <inlineHelpText>Total amount that DNE got as commission on Residual Opportunity.</inlineHelpText>
    <label>Flat Fee Paid To DNE</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>