force-app/main/default/objects/ResidentialCommissionConfigure__c/fields/Level10__c.field-meta.xml
<CustomField>
    <fullName>Level10__c</fullName>
    <label>Level 10 Commission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>