force-app/main/default/objects/ResidentialCommissionConfigure__c/fields/Level11__c.field-meta.xml
<CustomField>
    <fullName>Level11__c</fullName>
    <label>Level 11 Commission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>