force-app/main/default/objects/ResidentialCommissionConfigure__c/fields/Level12__c.field-meta.xml
<CustomField>
    <fullName>Level12__c</fullName>
    <label>Level 12 Commission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>