force-app/main/default/objects/ResidentialCommissionConfigure__c/fields/Opener__c.field-meta.xml
<CustomField>
    <fullName>Opener__c</fullName>
    <label>Opener Commission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>