force-app/main/default/objects/ResidentialCommissionConfigure__c/fields/ProvinceorState__c.field-meta.xml
<CustomField>
    <fullName>ProvinceorState__c</fullName>
    <label>Province or State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>