force-app/main/default/objects/ResidentialCommissionConfigure__c/fields/Total_Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Percentage__c</fullName>
    <formula>( Opener__c +   Level1__c + Level2__c + Level3__c + Level4__c + Level5__c + Level6__c + Level7__c + Level8__c + Level9__c + Level10__c + Level11__c + Level12__c + Level13__c + Level14__c + Level15__c + Level16__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>