force-app/main/default/objects/ResidentialCommissionConfigure__c/validationRules/Check_total_Comm_per_not_Exceed_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_total_Comm_per_not_Exceed_100</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Commission_Percentage__c&gt;100</errorConditionFormula>
    <errorMessage>Total Commission percentage is greater than 100</errorMessage>
</ValidationRule>