force-app/main/default/objects/ResidentialCommissionConfigure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flat_Fee_Paid_To_DNE__c</columns>
    <columns>EffectiveFrom__c</columns>
    <columns>Supplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>